intial commit repo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:DEVT14
 spring.datasource.username=DEVT14
 spring.datasource.password=bc4j
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+
+server.port=9090
