--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:DEVT14
+spring.datasource.url=jdbc:oracle:thin:@192.168.6.111:1521:orcl
 spring.datasource.username=DEVT14
 spring.datasource.password=bc4j
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
