--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:oracle:thin:@192.168.6.111:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@192.168.6.111:1521/orcl
 spring.datasource.username=DEVT14
 spring.datasource.password=bc4j
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-
 server.port=9090
+
+
+fawry.userIdentifier = '01095953445'
+fawry.userPassword = 'P@ssw0rd1'
